{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 11,
  "lineage": "8d544f71-58d3-ad52-9913-d37a0f25ead9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:250315610593:internet-gateway/igw-0f92f5e40dfc14c9c",
            "id": "igw-0f92f5e40dfc14c9c",
            "owner_id": "250315610593",
            "vpc_id": "vpc-0f430bacd0f9fb677"
          },
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:250315610593:route-table/rtb-075ac0fccfc7131b8",
            "id": "rtb-075ac0fccfc7131b8",
            "owner_id": "250315610593",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f92f5e40dfc14c9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "tags_all": {
              "Name": "prod-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f430bacd0f9fb677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff32b79c72c24dde",
            "route_table_id": "rtb-075ac0fccfc7131b8",
            "subnet_id": "subnet-03e8b5cca82a92bdc"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:250315610593:security-group/sg-0599d3044e689184c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0599d3044e689184c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220413094458733300000001",
            "name_prefix": "terraform-",
            "owner_id": "250315610593",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f430bacd0f9fb677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:250315610593:subnet/subnet-03e8b5cca82a92bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e8b5cca82a92bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250315610593",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f430bacd0f9fb677"
          },
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nginx-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:250315610593:vpc/vpc-0f430bacd0f9fb677",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1d95e4caa9c47e6",
            "default_route_table_id": "rtb-01e0afca9b574b849",
            "default_security_group_id": "sg-069fe16fa20ee8365",
            "dhcp_options_id": "dopt-0c69658167634ee82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f430bacd0f9fb677",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e0afca9b574b849",
            "owner_id": "250315610593",
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}